Alteracao tela splash e implantacao tela de Chat

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#f18c16"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
